--- a/ui/package.json
+++ b/ui/package.json
@@ -51,6 +51,8 @@
         "react-color": "^2.17.3",
         "react-copy-to-clipboard": "^5.0.2",
         "react-cytoscapejs": "^1.2.1",
+        "react-dnd": "^10.0.2",
+        "react-dnd-html5-backend": "^10.0.2",
         "react-dom": "^16.12.0",
         "react-dropzone": "^10.2.1",
         "react-feather": "^1.1.6",
