--- a/image/templates/kubernetes/helm/sensorchart/templates/sensor.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/sensor.yaml
@@ -92,6 +92,10 @@ spec:
         - name: ROX_OPENSHIFT_API
           value: "true"
           {{- end}}
+        {{ range .Values.envVars -}}
+        - name: {{ .name }}
+          value: {{ .value | quote}}
+        {{ end }}
         volumeMounts:
         - name: varlog
           mountPath: /var/log/stackrox/
