Create GKE clusters with a release channel specification. (stackrox/rox#5262)
https://cloud.google.com/kubernetes-engine/docs/concepts/release-channels

Using stable as default, which should not impact tests as the default cluster version of GKE is the same as the stable channel. Regular and rapid release channels can be specified with labels ci-gke-release-channel-{regular,rapid}. These labels are useful if we want to test against newer versions of k8s or different GKE node images.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -762,6 +762,15 @@ commands:
             cci-export NUM_NODES "$NUM_NODES"
             echo "Number of nodes for cluster is $NUM_NODES"
 
+            GKE_RELEASE_CHANNEL="stable"
+            if .circleci/pr_has_label.sh ci-gke-release-channel-rapid; then
+              GKE_RELEASE_CHANNEL="rapid"
+            elif .circleci/pr_has_label.sh ci-gke-release-channel-regular; then
+              GKE_RELEASE_CHANNEL="regular"
+            fi
+            cci-export GKE_RELEASE_CHANNEL "$GKE_RELEASE_CHANNEL"
+            echo "Using gke release channel: $GKE_RELEASE_CHANNEL"
+
       - create-gke:
           wait: false
 
