ROX-4609: Remove node data from indexer when removing cluster stores (stackrox/rox#5295)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2335,8 +2335,13 @@ jobs:
       - *backupDB
       - *storeDBBackupArtifact
       - *verifyNoStackRoxRestarts
-      - *storeK8sLogs
 
+      - run:
+          name: Destructive API tests
+          command: |
+            make -C tests destructive-tests
+
+      - *storeK8sLogs
       - teardown-gke
 
   gke-ui-e2e-tests:
