--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,4 +4,8 @@ TESTFLAGS=-race -p 1
 .PHONY: all
 all: test report
 
+destructive-tests:
+	@echo "+ $@"
+	@go test -cover -tags destructive -run TestClusterDeletion 2>&1 | tee test.log
+
 include ../make/stackrox.mk
