--- a/ui/package.json
+++ b/ui/package.json
@@ -4,12 +4,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@lifeomic/axios-fetch": "^1.4.2",
         "@tippy.js/react": "^3.1.1",
         "apollo-cache": "^1.3.4",
         "apollo-cache-inmemory": "^1.6.5",
         "apollo-client": "^2.6.8",
         "apollo-link": "^1.2.13",
-        "apollo-link-context": "^1.0.17",
         "apollo-link-error": "^1.1.10",
         "apollo-link-http": "^1.5.14",
         "apollo-utilities": "^1.3.3",
