Pass CA in roxctl invocations in tests/yamls/roxctl_verification.sh to avoid long warnings being printed (stackrox/rox#5258)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2230,7 +2230,7 @@ jobs:
       - run:
           name: API tests
           command: |
-            ./tests/yamls/roxctl_verification.sh
+            CA="${SERVICE_CA_FILE}" ./tests/yamls/roxctl_verification.sh
             make -C tests
 
       - run:
