Fixing kernel module api tests (stackrox/rox#5327)

--- a/qa-tests-backend/helm/values.k8s.yaml
+++ b/qa-tests-backend/helm/values.k8s.yaml
@@ -19,8 +19,8 @@ config:
   admissionControl:
     createService: true
     listenOnUpdates: true
-    enableService: false
-    enforceOnUpdates: false
+    enableService: true
+    enforceOnUpdates: true
     scanInline: false
     disableBypass: false
     timeout: 3
