--- a/ui/package.json
+++ b/ui/package.json
@@ -126,6 +126,7 @@
         "@tailwindcss/custom-forms": "^0.2.1",
         "@testing-library/jest-dom": "^4.1.0",
         "@testing-library/react": "^9.1.4",
+        "@testing-library/react-hooks": "^3.2.1",
         "@types/react": "^16.9.27",
         "cypress": "^3.8.3",
         "cypress-file-upload": "^3.5.3",
