Default values in k8s helm dynamic to false (stackrox/rox#5341)

--- a/qa-tests-backend/helm/values.k8s.yaml
+++ b/qa-tests-backend/helm/values.k8s.yaml
@@ -19,8 +19,8 @@ config:
   admissionControl:
     createService: true
     listenOnUpdates: true
-    enableService: true
-    enforceOnUpdates: true
+    enableService: false
+    enforceOnUpdates: false
     scanInline: false
     disableBypass: false
     timeout: 3
