--- a/ui/package.json
+++ b/ui/package.json
@@ -87,6 +87,7 @@
         "tippy.js": "^5.2.1",
         "typeface-open-sans": "^0.0.54",
         "typeface-open-sans-condensed": "^0.0.72",
+        "use-deep-compare-effect": "^1.3.1",
         "yup": "^0.28.3"
     },
     "scripts": {
