Forbid data-test-id to use data-testid consistently (stackrox/rox#5344)

--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -95,6 +95,13 @@
         "react/destructuring-assignment": [
             "off"
         ],
+        // forbid 'data-test-id' in preference of 'data-testid' 
+        "react/forbid-dom-props": [
+            "error",
+            {
+              "forbid": ["data-test-id"] 
+            }
+        ],
         // TODO-ivan: rules below are to be removed after fixing all violations in the code
         "react/no-array-index-key": "warn"
     },
