ROX-4622: Graceful shutdown logic for admission control service (stackrox/rox#5321)

--- a/image/templates/helm/sensorchart/templates/admission-controller.yaml
+++ b/image/templates/helm/sensorchart/templates/admission-controller.yaml
@@ -163,6 +163,9 @@ spec:
               scheme: HTTPS
               path: /ready
               port: 8443
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            failureThreshold: 1
           ports:
             - containerPort: 8443
               name: webhook
