Unify values.yaml for helm and kubectl bundle generation (stackrox/rox#5343)

--- a/image/templates/helm/sensorchart/templates/admission-controller.yaml
+++ b/image/templates/helm/sensorchart/templates/admission-controller.yaml
@@ -156,7 +156,7 @@ spec:
           fsGroup: 4000
       serviceAccount: admission-control
       containers:
-        - image: {{ printf "%s/%s:!!.MainVersion!!" .Values.image.registry.main .Values.image.repository.main }}
+        - image: {{ printf "%s/%s:!!.ImageTag!!" .Values.image.registry.main .Values.image.repository.main }}
           name: admission-control
           readinessProbe:
             httpGet:
