--- a/image/templates/helm/sensorchart/Chart.yaml
+++ b/image/templates/helm/sensorchart/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 name: sensor
 description: StackRox Sensor
-version: !!.MainVersion!!
-appVersion: !!.MainVersion!!
+version: !!.ImageTag!!
+appVersion: !!.ImageTag!!
 maintainers:
   - name: stackrox
     email: support@stackrox.com
