--- a/image/templates/helm/sensorchart/templates/sensor.yaml
+++ b/image/templates/helm/sensorchart/templates/sensor.yaml
@@ -59,7 +59,7 @@ spec:
       {{- end}}
       serviceAccount: sensor
       containers:
-      - image: {{ printf "%s/%s:!!.MainVersion!!" .Values.image.registry.main .Values.image.repository.main }}
+      - image: {{ printf "%s/%s:!!.ImageTag!!" .Values.image.registry.main .Values.image.repository.main }}
         name: sensor
         readinessProbe:
           httpGet:
@@ -198,7 +198,7 @@ spec:
       containers:
 {{ if ne .Values.config.collectionMethod "NO_COLLECTION"}}
       - name: collector
-        image: {{ printf "%s/%s:!!.CollectorVersion!!" .Values.image.registry.collector .Values.image.repository.collector }}
+        image: {{ printf "%s/%s:!!.CollectorImageTag!!" .Values.image.registry.collector .Values.image.repository.collector }}
         imagePullPolicy: Always
         env:
         - name: COLLECTOR_CONFIG
@@ -254,7 +254,7 @@ spec:
               fieldPath: spec.nodeName
         - name: ROX_ADVERTISED_ENDPOINT
           value: {{ .Values.endpoint.advertised }}
-        image: {{ printf "%s/%s:!!.MainVersion!!" .Values.image.registry.main .Values.image.repository.main }}
+        image: {{ printf "%s/%s:!!.ImageTag!!" .Values.image.registry.main .Values.image.repository.main }}
         imagePullPolicy: IfNotPresent
         name: compliance
         resources:
