Changing default collection method for helm and kubectl to KERNEL_MODULE (was incorrectly set to EBPF) (stackrox/rox#5367)

--- a/image/templates/helm/sensorchart/values.yaml
+++ b/image/templates/helm/sensorchart/values.yaml
@@ -15,7 +15,7 @@ image:
     collector: !! default "collector.stackrox.io" .CollectorRegistry !!
 
 config:
-  collectionMethod: !! default "EBPF" .CollectionMethod !!
+  collectionMethod: !! default "KERNEL_MODULE" .CollectionMethod !!
   admissionControl:
     createService: !! default false .AdmissionController !!
     listenOnUpdates: !! default false .AdmissionControlListenOnUpdates !!
