Don't clean up clusters on fail for RHEL (stackrox/rox#5373)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1855,7 +1855,9 @@ jobs:
           paths:
             - image/rhel/bundle.tar.gz
 
-      - cleanup-clusters-on-fail
+      # TODO: Add this back -- it was temporarily removed because of stability issues with this build caused by Google
+      # storage.
+      # - cleanup-clusters-on-fail
 
   build-deployer:
     executor: custom
