--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1764,6 +1764,11 @@ jobs:
             make ossls-notice
 
       - run:
+          name: Log in to Docker Hub to pull the docs image
+          command: |
+            docker login -u "$DOCKER_IO_PULL_USERNAME" -p "$DOCKER_IO_PULL_PASSWORD" docker.io
+
+      - run:
           name: Build main image
           command: make docker-build-main-image
 
@@ -1837,6 +1842,11 @@ jobs:
                 cp "${file}" "${overwrite}"
               done
             fi
+
+      - run:
+          name: Log in to Docker Hub to pull the docs image
+          command: |
+            docker login -u "$DOCKER_IO_PULL_USERNAME" -p "$DOCKER_IO_PULL_PASSWORD" docker.io
 
       - run:
           name: Build main image for RHEL
