ROX-4884, ROX-4885: Google Identity-Aware Proxy (IAP) integration - backend and frontend (stackrox/rox#5705)

--- a/image/templates/helm/centralchart/templates/loadbalancer.yaml
+++ b/image/templates/helm/centralchart/templates/loadbalancer.yaml
@@ -35,13 +35,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+{{if eq .Values.exposure.type "NodePort"}}
+  annotations:
+    cloud.google.com/app-protocols: '{"api": "HTTPS"}'
+    service.alpha.kubernetes.io/app-protocols: '{"api": "HTTPS"}'
+{{- end}}
   name: central-loadbalancer
   namespace: {{.Values.namespace}}
   labels:
     app.kubernetes.io/name: stackrox
 spec:
   ports:
-  - port: {{.Values.exposure.port}}
+  - name: api
+    port: {{.Values.exposure.port}}
     targetPort: api
   selector:
     app: central
