Collect test metrics on nightly builds (stackrox/rox#5759)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3888,6 +3888,8 @@ workflows:
           filters:
             branches:
               only: master
+            tags:
+              only: /.*-nightly-.*/
 
   update_dev_license:
     triggers:
