--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2474,6 +2474,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_ADMISSION_CONTROL_SERVICE_ENFORCE_ON_UPDATE: true
       - ROX_POLICY_IMPORT_EXPORT: true
+      - ROX_BOOLEAN_POLICY_LOGIC: true
 
     steps:
       - checkout
