--- a/ui/package.json
+++ b/ui/package.json
@@ -35,6 +35,7 @@
         "graphql-tag": "^2.10.3",
         "history": "^4.9.0",
         "html2canvas": "1.0.0-rc.1",
+        "initials": "^3.0.1",
         "jspdf": "^1.5.3",
         "jspdf-autotable": "^3.3.1",
         "lodash": "^4.17.15",
