Add Istio proxy bypass annotations to all our workloads (stackrox/rox#5640)

--- a/image/templates/helm/centralchart/templates/deployment.yaml
+++ b/image/templates/helm/centralchart/templates/deployment.yaml
@@ -23,6 +23,8 @@ spec:
       labels:
         app.kubernetes.io/name: stackrox
         app: central
+      annotations:
+        traffic.sidecar.istio.io/excludeInboundPorts: "8443"
     spec:
       {{if .Values.nodeSelector -}}
       nodeSelector:
