--- a/image/templates/helm/centralchart/templates/service.yaml
+++ b/image/templates/helm/centralchart/templates/service.yaml
@@ -13,3 +13,24 @@ spec:
   selector:
     app: central
   type: ClusterIP
+
+{{ if .Capabilities.APIVersions.Has "networking.istio.io/v1beta1/DestinationRule" }}
+---
+apiVersion: networking.istio.io/v1beta1
+kind: DestinationRule
+metadata:
+  name: central-internal-no-istio-mtls
+  namespace: {{ .Values.namespace }}
+  labels:
+    app.kubernetes.io/name: stackrox
+  annotations:
+    stackrox.io/description: "Disable Istio mTLS for port 443, since StackRox services use built-in mTLS."
+spec:
+  host: central.{{ .Values.namespace }}.svc.cluster.local
+  trafficPolicy:
+    portLevelSettings:
+      - port:
+          number: 443
+        tls:
+          mode: DISABLE
+{{ end }}
