--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2269,6 +2269,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE_ENFORCE_ON_UPDATE: true
       - ROX_POLICY_IMPORT_EXPORT: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - checkout
@@ -2474,8 +2475,9 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_ADMISSION_CONTROL_SERVICE_ENFORCE_ON_UPDATE: true
       - ROX_POLICY_IMPORT_EXPORT: true
-      - ROX_CURRENT_USER_INFO: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_CURRENT_USER_INFO: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - checkout
@@ -2546,6 +2548,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - run-qa-tests:
@@ -2566,6 +2569,7 @@ jobs:
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SENSOR_DETECTION: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - checkout
@@ -2599,6 +2603,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - run-qa-tests:
@@ -2627,6 +2632,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - run-qa-tests:
@@ -3155,6 +3161,7 @@ jobs:
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SENSOR_DETECTION: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - run-openshift-tests:
@@ -3173,6 +3180,7 @@ jobs:
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SENSOR_DETECTION: true
       - ROX_BOOLEAN_POLICY_LOGIC: true
+      - ROX_AUTH_TEST_MODE_UI: true
 
     steps:
       - run-openshift-tests:
