--- a/ui/package.json
+++ b/ui/package.json
@@ -36,6 +36,7 @@
         "history": "^4.9.0",
         "html2canvas": "1.0.0-rc.1",
         "initials": "^3.0.1",
+        "js-base64": "^2.5.2",
         "jspdf": "^1.5.3",
         "jspdf-autotable": "^3.3.1",
         "lodash": "^4.17.15",
